<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_page_background"
    android:backgroundTintMode="src_in"
    android:padding="24dp"
    tools:context=".LandingPage">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="556dp"
        android:layout_height="496dp"
        android:contentDescription="@string/ynion_logo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288"
        app:srcCompat="@drawable/landing_logo" />

    <Button
        android:id="@+id/landingpage_Signin"
        android:layout_width="316dp"
        android:layout_height="65dp"
        android:layout_marginTop="556dp"
        android:backgroundTint="#F66A3F"
        android:elevation="100dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/log_in"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/landingpage_Signup"
        android:layout_width="316dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_up"
        android:textColor="#CA7054"
        android:textSize="20sp"
        app:strokeColor="#812E14"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/landingpage_Signin"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/tACandPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="By continuing, you agree to our"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landingpage_Signup" />

    <TextView
        android:id="@+id/termsAndCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_condition"
        android:textColor="#F66A3F"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tACandPolicy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>
