<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginBackgroundLayout"
        android:layout_width="412dp"
        android:layout_height="354dp"
        android:layout_weight="1"
        android:background="@drawable/login_and_signup_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ynionLogo"
            android:layout_width="378dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153"
            app:srcCompat="@drawable/landing_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="369dp"
        android:layout_height="353dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/linear_layout_background_and_borders"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBackgroundLayout">

        <TextView
            android:id="@+id/signInCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Log In"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/signInCaptionn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Login with your account"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_Username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/fields_bg"
            android:elevation="2dp"
            android:baselineAligned="false"
            android:hint="Username/Email"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ET_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            app:passwordToggleEnabled="true"
            android:importantForAutofill="no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fields_bg"
                android:hint="Password"
                android:textColorHint="@color/black"
                android:paddingLeft="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="1dp"
                android:text="@string/remember_me_text" />

            <TextView
                android:id="@+id/forgotPasswordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="1dp"
                android:text="@string/forgot_password_text" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginBtn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="#F66A3F"
            android:text="@string/log_in_text"
            android:textSize="20sp"
            app:strokeColor="#812E14"
            app:strokeWidth="1dp"
            android:elevation="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663">

        <ImageView
            android:id="@+id/linebar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/continueWithTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/or_continue_with_text" />

        <ImageView
            android:id="@+id/linebar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/line" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/facebookIC"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/gmaillogin_text"
            app:srcCompat="@drawable/googlelogo" />

        <ImageView
            android:id="@+id/GmailIC"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/facebooklogin_text"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="243dp"
        android:layout_height="22dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.339">

        <TextView
            android:id="@+id/dontHaveAnAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_text" />

        <TextView
            android:id="@+id/signUpHereTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up_here_text"
            android:textColor="@color/Orange" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
