<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginBackgroundLayout"
        android:layout_width="412dp"
        android:layout_height="354dp"
        android:layout_weight="1"
        android:background="@drawable/login_and_signup_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ynionLogo"
            android:layout_width="378dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153"
            app:srcCompat="@drawable/landing_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/signupFormLayout"
        android:layout_width="365dp"
        android:layout_height="484dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/linear_layout_background_and_borders"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBackgroundLayout">

        <TextView
            android:id="@+id/signInCaption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/signInCaption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Create your new account"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_Username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/fields_bg"
            android:baselineAligned="false"
            android:elevation="2dp"
            android:hint="Username/Email"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/ET_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/fields_bg"
            android:baselineAligned="false"
            android:elevation="2dp"
            android:hint="Email"
            android:importantForAutofill="no"
            android:paddingLeft="10dp"
            tools:ignore="TextFields" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ET_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fields_bg"
                android:hint="Password"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ET_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:importantForAutofill="no"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fields_bg"
                android:hint="Confirm Password"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignupBtn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="25dp"
            android:backgroundTint="#F66A3F"
            android:elevation="10dp"
            android:text="@string/sign_up_text"
            android:textSize="20sp"
            app:strokeColor="#812E14"
            app:strokeWidth="1dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupFormLayout"
        app:layout_constraintVertical_bias="0.122">

        <ImageView
            android:id="@+id/linebar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/continueWithTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/or_continue_with_text" />

        <ImageView
            android:id="@+id/linebar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/line" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/facebookIC"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/gmaillogin_text"
            app:srcCompat="@drawable/googlelogo" />

        <ImageView
            android:id="@+id/GmailIC"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/facebooklogin_text"
            app:srcCompat="@drawable/facebook" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="239dp"
        android:layout_height="66dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.339">

        <TextView
            android:id="@+id/alreadyHaveAnAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account_text"
            app:layout_constraintEnd_toStartOf="@id/logInHereTV"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/GmailIC" />

        <TextView
            android:id="@+id/logInHereTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_here_text"
            android:textColor="@color/Orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/alreadyHaveAnAccountTV"
            app:layout_constraintTop_toBottomOf="@id/GmailIC" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
